<resources>
    <string name="app_name">Wala</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fbId">861240457319816</string>
    <string name="thisWkGoal">THIS WEEK\'S GOAL</string>
    <string name="youEarned">YOU EARNED</string>
    <string name="youSpent">YOU SPENT</string>
    <string name="youSaved">YOU SAVED</string>
    <string name="myTodoList">My Todo List</string>
    <string name="recentTransactions">Recent Transactions</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="readyToGo">You\'re Ready to Save!</string>
    <string name="whatNext">A message about what to do next.</string>
    <string name="signUp">SIGN UP</string>
    <string name="step12">STEP 1 of 2: </string>
    <string name="accInfo">ACCOUNT INFO</string>
    <string name="emailAddress">Email Address</string>
    <string name="phNo">Phone Number</string>
    <string name="userName">Username</string>
    <string name="pwd">Password</string>
    <string name="placeHolderText"></string>
    <string name="phNumber">000-000-0000</string>
    <string name="pwdHint"></string>
    <string name="step22">STEP 2 of 2: </string>
    <string name="personalInfo">PERSONAL INFO</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="country">Country</string>
    <string name="chooseCountry">Choose Your Country...</string>
    <string name="city">City</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="choose">Choose...</string>
    <string name="financialProfile">FINANCIAL PROFILE</string>
    <string name="step15">STEP 1 of 5: </string>
    <string name="dependents">DEPENDENTS</string>
    <string name="dependentsContent">How many dependents do you have? How many people rely on you financially? (children, spouses, parents, relatives)</string>
    <string name="noOfdependents">Number of Dependents</string>
    <string name="step14">STEP 1 of 4: </string>
    <string name="income">INCOME</string>
    <string name="avgMonthlyIncome">What\'s your average monthly income?</string>
    <string name="empStatus">Employment Status</string>
    <string name="incomeType">Income Type</string>
    <string name="incomeFrequency">How often do you get paid?</string>
    <string name="popUpStep1">Input the amount or best estimate of your monthly earnings.</string>
    <string name="step24">STEP 2 of 4: </string>
    <string name="savings">SAVINGS</string>
    <string name="savingsContent">How much money do you have saved as of TODAY?</string>
    <string name="whereYouKeep">Where do you currently keep your savings?</string>
    <string name="step34">STEP 3 of 4: </string>
    <string name="debt">DEBT</string>
    <string name="popUp3of1">Debt is any money that you owe to others, like a loan from a bank or friend.</string>
    <string name="debtCurrently">How much money do you owe in debt, as of today?</string>
    <string name="debtType">What type of debt do you owe(if any)?</string>
    <string name="popUp3of2">Credit is any money that is owed to you by some-one else, like a loan to a friend.</string>
    <string name="debtOwed">How much money is owed to you in credit, as of today?</string>
    <string name="loanDebt">Loan Debt</string>
    <string name="creditCardDebt">Credit Card Debt</string>
    <string name="schoolDebt">School Debt</string>
    <string name="otherDebt">Other Debt</string>
    <string name="step44">STEP 4 of 4: </string>
    <string name="expenses">MONTHLY EXPENSES</string>
    <string name="rent">Rent</string>
    <string name="groceries">Groceries</string>
    <string name="transportation">Transportation</string>
    <string name="health">Health</string>
    <string name="education">Education</string>
    <string name="utilities">Utilities</string>
    <string name="shopping">Shopping</string>
    <string name="entertainment">Entertainment</string>
    <string name="diningOut">Dining Out</string>
    <string name="travel">Travel</string>
    <string name="other">Other</string>
    <string name="more">MORE</string>
    <string name="myAccount">My Account</string>
    <string name="peronalInfo">Personal Info</string>
    <string name="financialInfo">Financial Info</string>
    <string name="chngPswd">Change Password</string>
    <string name="settings">Settings</string>
    <string name="referFrnd">Refer a Friend</string>
    <string name="otherMore">Other</string>
    <string name="faq">FAQ</string>
    <string name="abtSwift">About Wala</string>
    <string name="logout">Logout</string>
    <string name="editPersonal">PERSONAL INFO</string>
    <string name="changePswd">CHANGE PASSWORD</string>
    <string name="enterOldPwd">Enter Your Old Password</string>
    <string name="enterNewPwd">Enter Your New Password</string>
    <string name="confirmNewPwd">Confirm Your New Password</string>
    <string name="otpTxt">An OTP code has been sent to you in a text message.</string>
    <string name="otpInputTxt">Input the OTP code to authorize your account.</string>
    <string name="otpCode"></string>
    <string name="enterOtpCode">OTP Code</string>
    <string name="otpBttn">AUTHORIZE</string>
    <string name="settingsTxt">SETTINGS</string>
    <string name="setting1">Setting 1</string>
    <string name="setting2">Setting 2</string>
    <string name="setting3">Setting 3</string>
    <string name="setting4">Setting 4</string>
    <string name="setting5">Setting 5</string>
    <string name="referTxt">REFER A FRIEND</string>
    <string name="inviteHeader">Invite a Friend and Earn Points</string>
    <string name="inviteTxt">For every friend you refer to Wala that signs up, you\'ll receive XXX Points, as well as XX Points for every action they take after!</string>
    <string name="referralHistory">Referrral History</string>
    <string name="frndName">Friend\'s Name</string>
    <string name="frndNameStatus">Status</string>
    <string name="loginTxt">LOGIN</string>
    <string name="loginEmail">Email Address</string>
    <string name="loginPwd">Password</string>
    <string name="loginUsername">Username</string>
    <string name="dontHaveAcc">Don\'t have an account?</string>
    <string name="loginSingup">Sign up!</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="aboutUs">ABOUT WALA</string>
    <string name="aboutSwift">About Wala</string>
    <string name="aboutSwiftTxt">Wala is a mobile app designed to help you save money. By inputting your financial information, daily expenses, and income you can begin building your personal savings. Wala will automatically generate goals for you every week and reaching those goals will result in points, which can be redeemed for prizes.</string>
    <string name="firstAndLastNames">Firstname Lastname</string>
    <string name="aboutTeamTitle1">Tricia Martinezx</string>
    <string name="aboutTeamTitle2">Samer Saab</string>
    <string name="aboutTeamTitle3">Dennis Ramirez</string>
    <string name="aboutTeamTitle4">Emmy Baluye</string>
    <string name="aboutTeamContent1">Patricia is the Co-Founder and CEO of Wala. She has dedicated her life to helping people and has started numerous companies that do just that.</string>
    <string name="aboutTeamContent2">Samer Co-Founder and Chief Product of Officer. All he thinks about each day is how to make Wala a better money saving tool for people around the globe. </string>
    <string name="aboutTeamContent3">Dennis is the Head of Design. Of the hundreds of websites and apps he has designed, none are as amazing and important as Wala!</string>
    <string name="aboutTeamContent4">Emmy is the Lead Community Manager. His efforts are driving the Wala savings revolution throughout the world.</string>
    <string name="faqHeader">FAQ</string>
    <string name="faqQues">1.This is an FAQ question?</string>
    <string name="prizesHeader">PRIZES</string>
    <string name="dailyQuiz">Take the Daily Quiz!</string>
    <string name="weeklyDrawing">Enter weekly Drawing</string>
    <string name="monthlyLottery">Enter Monthly Lottery</string>
    <string name="winPoints">PLAY TO WIN POINTS</string>
    <string name="winCash">PLAY TO WIN CASH</string>
    <string name="ptsHistory">Points History</string>
    <string name="selectAnswer">SELECT YOUR ANSWER BELOW</string>
    <string name="hint">HINT</string>
    <string name="question">What is the answer to this question about finance?</string>
    <string name="answer1">Answer 1 for this question.</string>
    <string name="answer2">Answer 2 for this question.</string>
    <string name="answer3">Answer 3 for this question.</string>
    <string name="hintTxt">This is a hint to help solve the question.</string>
    <string name="currentPrize">CURRENT PRIZE</string>
    <string name="descriptionWeekly">DESCRIPTION</string>
    <string name="prizeDollar">$10,000</string>
    <string name="participants">37 participants</string>
    <string name="daysLeft">4 Days Left</string>
    <string name="descriptionTxt">Enter the drawing for this week\'s great prize! Entry costs XX points. X winners will be chosen!</string>
    <string name="descriptionMonthlyTxt">Tickets cost XX points and you can purchase as many as you like. This month\'s prize is XX and there will be YY winners selected.</string>
    <string name="transaction">TRANSACTIONS</string>
    <string name="transExpenses">Expenses</string>
    <string name="transNeeds">Needs</string>
    <string name="transWants">Wants</string>
    <string name="transFinancials">Income &amp; Payments</string>
    <string name="transactionAdd">TRANSACTIONS: ADD</string>
    <string name="transactionAddType">TRANSACTION TYPE</string>
    <string name="transactionAddValue">DEBT</string>
    <string name="transactionDetailHeader">Please provide details for this transaction</string>
    <string name="debtAmount">Debt Amount</string>
    <string name="transactionDescription">Description</string>
    <string name="dateOfTransaction">Date of transaction</string>
    <string name="transactionSave">SAVE</string>
    <string name="transactionEdit">EDIT TRANSACTION</string>
    <string name="balanceHeader">BALANCES</string>
    <string name="savingsTranstext">Savings Transactions</string>
    <string name="accountbalsavings">Account Balance:</string>
    <string name="transactionbegin">Transaction Begin</string>
    <string name="transactionend">Transaction End</string>
    <string name="company">Company</string>
    <string name="date">Date</string>
    <string name="progressHeader">PROGRESS</string>
    <string name="deptcrediransactions">Dept/Credit Transactions</string>
    <string name="balanceDateOfTransactionEnd">Transaction End</string>
    <string name="balanceDateOfTransactionStart">Transaction Begin</string>
    <string name="savingstotalhealth">Savings Total</string>
    <string name="savingsperhealth">Savings %</string>
    <string name="savingsdepthealth">Dept</string>
    <string name="goaltxt">Goal</string>
    <string name="resulttxt">Result</string>
    <string name="pointstxt">Points</string>
    <string name="transAdHeader">TRANSACTIONS: ADD</string>
    <string name="addingTransFor">Adding a Transaction for: </string>
    <string name="transTransport">TRANSPORTATION</string>
    <string name="transExpenseAmt">Expense Amount</string>
    <string name="transDate">Date of Transaction</string>
    <string name="transDesc">Description</string>
    <string name="welcometxt">Welcome to Wala!</string>
    <string name="info1txt1"><b>Wala</b> is your personalized savings tool.</string>
    <string name="info1txt">Swipe to learn how <b>Wala</b> can help you increase your life savings!</string>
</resources>