<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:orientation="horizontal">

   <TextView
       android:id="@+id/company"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/company"
       android:textColor="@color/balsavingtable"
      android:textStyle="bold"
       android:layout_weight="1"
       />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/description"
        android:textColor="@color/balsavingtable"
        android:textStyle="bold"
        android:layout_weight="2"
        />
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/date"
        android:textColor="@color/balsavingtable"
        android:textStyle="bold"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/amount"
        android:textColor="@color/balsavingtable"
        android:textStyle="bold"
        android:layout_weight="1"
        />

</LinearLayout>
