<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"

    android:orientation="horizontal">

    <TextView
        android:id="@+id/dategoals"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/date"
        android:textColor="@color/healthtabletxt"
        android:textStyle="bold"
        android:layout_weight="0.5"
        />

    <TextView
        android:id="@+id/goalText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/goaltxt"
        android:textColor="@color/healthtabletxt"
        android:textStyle="bold"
        android:layout_weight="2.5"
        />
    <TextView
        android:id="@+id/resultgoal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/resulttxt"
        android:textColor="@color/healthtabletxt"
        android:textStyle="bold"
        android:layout_weight="0.5"
        />
    <TextView
        android:id="@+id/pointsgoal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/pointstxt"
        android:textColor="@color/healthtabletxt"
        android:textStyle="bold"
        android:layout_weight="0.5"
        />

</LinearLayout>
