<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="4"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        />

    <TextView
        android:id="@+id/savingsTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savingstotalhealth"
        android:textColor="@color/healthtabletxt"
        android:textSize="15sp"
        android:layout_weight="0.5"
        />

    <TextView
        android:id="@+id/savingsPer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savingsperhealth"
        android:textColor="@color/healthtabletxt"
        android:textSize="15sp"
        android:layout_weight="0.5"
        />
    <TextView
        android:id="@+id/deptHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savingsdepthealth"
        android:textColor="@color/healthtabletxt"
        android:textSize="15sp"
        android:layout_weight="0.5"
        />

</LinearLayout>
