<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<RelativeLayout
        android:id="@+id/layForStep1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        />-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout style="@style/HeaderTheme">

                <TextView
                    style="@style/HeaderTextTheme"
                    android:text="@string/more" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtForMyAcc"
                style="@style/TextSmallGreyTheme"
                android:layout_marginLeft="@dimen/listItemMarginTop"
                android:layout_marginTop="@dimen/listItemMarginTop"
                android:text="@string/myAccount" />

            <ListView
                android:id="@+id/listViewForMyAcc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/commonMargin"
                android:divider="@null" />

            <TextView
                android:id="@+id/txtForOther"
                style="@style/TextSmallGreyTheme"
                android:layout_marginLeft="@dimen/listItemMarginTop"
                android:layout_marginTop="@dimen/listItemMarginTop"
                android:text="@string/otherMore" />

            <ListView
                android:id="@+id/listViewForOther"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/commonMargin"
                android:divider="@null" />
            <RelativeLayout
                android:id="@+id/layForLogout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/listItemMarginTop"
                >
                <TextView
                    android:id="@+id/txtForLogout"
                    style="@style/TextMediumTheme"
                    android:layout_marginLeft="@dimen/listItemMarginTop"
                    android:text="@string/logout" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>